fix bug\(remove saved plan overflow-x:scroll\)

--- a/www/css/setting.css
+++ b/www/css/setting.css
@@ -158,7 +158,7 @@
 .saved-plan-list {
     display: none;
     max-height: calc(100vh - 100vh * 0.35);
-    overflow-y: scroll;
+    overflow: hidden scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
